2010-09-27  Sam Steingold  <sds@gnu.org>

	rely on gnulib for setenv portability
	* lispbibl.d (clisp_setenv): remove
	* misc.d (push_envar): return no values
	(GETENV): remove dead code
	(cat_env_var, setenv_via_environ, clisp_setenv): remove
	(SETENV): use setenv and unsetenv instead of clisp_setenv
	* spvw_language.d (init_language): ditto
	* Makefile.devel (GNULIB_CORE): add setenv & unsetenv
	* gllib/malloca.c, gllib/malloca.h, gllib/malloca.valgrind:
	* gllib/setenv.c, gllib/stdlib.in.h, gllib/unsetenv.c:
	* glm4/eealloc.m4, glm4/environ.m4, glm4/malloca.m4:
	* glm4/setenv.m4, glm4/stdlib_h.m4: add

2010-09-27  Sam Steingold  <sds@gnu.org>

	* Makefile.devel (GNULIB_CORE): add sys_wait
	* configure.in: call gl_SYS_WAIT_H
	* pathname.d (EXECUTE): assume that WEXITSTATUS et al are present
	* gllib/sys_wait.in.h, glm4/sys_wait_h.m4: add

2010-09-27  Sam Steingold  <sds@gnu.org>

	SIGWINCH updates the SCREEN's idea of window size
	* lispbibl.d (resize_screen) [SCREEN]: declare
	* spvw_sigwinch.d (update_linelength) [SCREEN]: call resize_screen()
	* stream.d (resize_screen) [SCREEN]: implement
	Reported by <edgar-rft@web.de>

2010-09-21  Vladimir Tzankov  <vtzankov@gmail.com>

	* pathname.d (unblock_all_signals): unblocks all blocked signals.
	used in child processes to clear parent's signal mask
	(EXT::LAUNCH, EXT:EXECUTE): use it

2010-09-21  Sam Steingold  <sds@gnu.org>

	* modules/syscalls/calls.c (POSIX::CHROOT): add
	* modules/syscalls/posix.lisp (chroot) [unix]: export
	* modules/syscalls/configure.in: check for chroot

2010-09-20  Sam Steingold  <sds@gnu.org>

	* init.lisp (load): if filename is a non-file stream,
	do not call TRUENAME on it

2010-09-17  Sam Steingold  <sds@gnu.org>

	* m4/proto.m4 (CL_PROTO): remove $ac_t (obsolete for 10 years!)
	<http://article.gmane.org/gmane.comp.sysutils.autoconf.general/13335>

2010-09-17  Sam Steingold  <sds@gnu.org>

	* makemake.in (LIBS): add LIBSOCKET after GLLIB_A so that